ci(v2): update golang-action version

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -5,8 +5,6 @@ jobs:
     name: checks
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@master
-    - name: Run all checks
-      uses: cedrickring/golang-action@1.6.0
-      env:
-        GO111MODULE: "on"
+      - uses: actions/checkout@master
+      - name: Run all checks
+        uses: cedrickring/golang-action@v2.0.0-beta
