--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,11 +8,9 @@ jobs:
       - uses: actions/checkout@master
 
       - name: Build all binaries
-        uses: cedrickring/golang-action@1.3.0
-        env:
-          GO111MODULE: "on"
+        uses: cedrickring/golang-action@v2.0.0
         with:
-          args: make build-all
+          customCommand: make build-all
 
       - name: Upload windows release
         uses: JasonEtco/upload-to-release@master
